--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-test.url=http://weixt.spacetech.com.cn:9998
+test.url=http://weixt.spacetech.com.cn:8090
 
 
 #PC端密码登录接口
@@ -12,3 +12,14 @@ versionList.url =/api/pc/recruitment_version_list
 
 #配置保存
 costTypeConfigSave.url=/api/pc/oa_costTypeConfig_save
+
+#配置列表
+costTypeList.url=/api/pc/oa_costTypeConfig_listCostType
+
+#删除类型配置
+costType_deleteCostType.url=/api/pc/oa_costTypeConfig_deleteCostType
+
+#保存金额
+costDayRecord_save.url=/api/pc/oa_costDayRecord_save
+
+
