--- a/api/pom.xml
+++ b/api/pom.xml
@@ -25,6 +25,12 @@
             </plugin>
         </plugins>
 
+            <resources>
+                <resource>
+                    <directory>src/main/resources</directory>
+                </resource>
+            </resources>
+
     </build>
 
     <dependencies>
