--- a/api/pom.xml
+++ b/api/pom.xml
@@ -104,6 +104,13 @@
             <version>6.10</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+
     </dependencies>
 
 
